- fixed wrongly ingored tags in copyright post - fixed layout and spacing - readded post sidebar, now it will look good in mobile

--- a/_sass/bootkyll/_masthead.scss
+++ b/_sass/bootkyll/_masthead.scss
@@ -21,7 +21,10 @@
 
 header.masthead {
 	// TIP: Background images are set within the HTML using inline CSS!
-	margin-bottom: 50px;
+	margin-bottom: 10px;
+	@media only screen and (min-width: 768px) {
+		margin-bottom: 50px;
+	}
 	background: no-repeat center center;
 	background-color: $gray-600;
 	background-attachment: scroll;
